# UWB_board_code

./: .gitignore  README.md
Blink_v2/: CMakeLists.txt  STM32L4.ioc  STM32L433XX_FLASH.ld
Blink_v2/App/Accelerometer/: lsm6dsv.c  lsm6dsv.h  lsm6dsv_ST_example.h  lsm6dsv_self_test.c
Blink_v2/App/DWM/: DWM3000.c
Blink_v2/App/Generic/: my_print.cpp
Blink_v2/Core/Inc/: FreeRTOSConfig.h
Blink_v2/Core/Src/: main.c  stm32l4xx_it.c
Blink_v2/Drivers/DW3000/: CMakeLists.txt
Blink_v2/Drivers/DW3000/dwt_uwb_driver/: CMakeLists.txt
Blink_v2/Drivers/LSM6DSV/: CMakeLists.txt
Blink_v2/Drivers/LSM6DSV/lsm6dsv/: CMakeLists.txt
Blink_v2/USB_DEVICE/App/: usbd_desc.c  usbd_dfu_if.c  usbd_dfu_if.h
Blink_v2/cmake/stm32cubemx/: CMakeLists.txt
Drawio/: UWB_scheme.drawio  dwm_IRQ.drawio  dwm_rx.drawio  dwm_tx.drawio  dwm_wakeup.drawio
Hello_world/: STM32L4.ioc
Hello_world/App/: CMakeLists.txt
Hello_world/App/DWM/: DWM3000.c  DWM3000.h  DWM3000_RxTx.c  DWM3000_RxTx.h  DWM3000_driver.c  DWM3000_driver.h  DWM3000_setup.h
Hello_world/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Hello_world/Core/Src/: main.c  stm32l4xx_it.c
Hello_world/Drivers/DW3000/Platform/: CMakeLists.txt  dw3000_hw.h  dw3000_spi_trace.c
Hello_world/Drivers/DW3000/Platform/stm-freertos/: dw_3000_hw.c
Hello_world/Drivers/LSM6DSV/Platform/: CMakeLists.txt
Hello_world/USB_DEVICE/App/: usbd_cdc_if.c
Position/: CMakeLists.txt  CMakePresets.json  STM32L4.ioc
Position/App/: CMakeLists.txt
Position/App/Accelerometer/: imu.c  imu.h  imu_setup.h  lsm6dsv.c  lsm6dsv.h  lsm6dsv_self_test.c  read_data_polling.c
Position/App/Blink/: blink.c  blink.cpp  blink.h
Position/App/Calculations/: calibrate.c  calibrate.h  distance.c  distance.h  ekf.c  ekf.h
Position/App/DWM/: DWM3000.c  DWM3000_driver.c  DWM3000_driver.h  DWM3000_setup.h
Position/App/Generic/: my_print.c  my_print.h
Position/App/UWB_app/: messages.c  messages.h  position.c  position.h  uwb_exchange.c  uwb_exchange.h  uwb_network.c  uwb_network.h
Position/Board_V1.0/: STM32L4.ioc
Position/Board_V1.0/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Position/Board_V1.0/Core/Src/: freertos.c  main.c
Position/Board_V1.0/cmake/stm32cubemx/: CMakeLists.txt
Position/Board_V1.1/: CMakeLists.txt  STM32L4.ioc
Position/Board_V1.1/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h
Position/Board_V1.1/Core/Src/: main.c  stm32l4xx_hal_msp.c
Position/Board_V1.1/USB_DEVICE/App/: usbd_cdc_if.c
Position/Board_V1.1/cmake/stm32cubemx/: CMakeLists.txt
Position/Core/Inc/: main.h
Position/Core/Src/: main.c  stm32l4xx_hal_msp.c
Position/Drivers/DW3000/Platform/: deca_compat.c
Position/Drivers/DW3000/Platform/stm-freertos/: deca_port.c  dw3000_spi.c
Position/Drivers/LSM6DSV/Platform/: lsm6dsv_platform.c  lsm6dsv_platform.h
Position/USB_DEVICE/App/: usb_device.c
TWR/: STM32L4.ioc
TWR/App/: CMakeLists.txt
TWR/App/DWM/: DWM3000.c  DWM3000.h  DWM3000_driver.c  DWM3000_driver.h
TWR/App/Generic/: my_print.c  my_print.h
TWR/App/UWB_app/: messages.c  messages.h  position.c  position.h  uwb_exchange.c  uwb_exchange.h  uwb_network.c  uwb_network.h
TWR/Core/Inc/: main.h
TWR/Core/Src/: main.c  stm32l4xx_hal_msp.c
TWR/Drivers/DW3000/Platform/stm-freertos/: dw3000_spi.c
TWR/Drivers/DW3000/dwt_uwb_driver/dw3000/: dw3000_device.c
TWR/Drivers/LSM6DSV/Platform/: lsm6dsv_platform.c
bllink/: .cproject  .project  CMakeLists.txt  STM32L4.ioc  STM32L4.launch  STM32L433CCTX_FLASH.ld
bllink/Core/Inc/: FreeRTOSConfig.h  main.h  my_print.h  stm32l4xx_it.h
bllink/Core/Inc/LSM6DSV/: lsm6dsv_ST_example.h
bllink/Core/Src/: blink.cpp  main.c  my_print.cpp  stm32l4xx_hal_msp.c  syscalls.c
bllink/Core/Src/LSM6DSV/: lsm6dsv.c  lsm6dsv_platform.c  lsm6dsv_reg.c  lsm6dsv_self_test.c  read_data_polling.c
bllink/Drivers/dw3000-decadriver/dwt_uwb_driver/: CMakeLists.txt
bllink/Drivers/dw3000-decadriver/dwt_uwb_driver/dw3000/: dw3000_device.c
bllink/USB_DEVICE/App/: usb_device.c
bllink/cmake/: starm-clang.cmake
bllink/cmake/stm32cubemx/: CMakeLists.txt
